[package]
name = "sha2"
version = "0.1.0"
description = "sha2 binding"
authors = ["Shohei YOSHIDA"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
